adguard-home/unbound-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unbound
  namespace: adguard-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unbound
  template:
    metadata:
      labels:
        app: unbound
    spec:
      containers:
        - name: unbound
          image: mvance/unbound-rpi:latest
          # image: mvance/unbound:latest
          volumeMounts:
            - name: unbound-config
              mountPath: /opt/unbound/etc/unbound/unbound.conf
              subPath: unbound.conf
      volumes:
        - name: unbound-config
          configMap:
            name: unbound-config
