adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  selector:
    app: adguard-home
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 53
    - name: dhcp
      protocol: UDP
      port: 67
      targetPort: 67
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: http1
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
