adguard-home/unbound-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unbound
  namespace: adguard-home
spec:
  type: ClusterIP
  selector:
    app: unbound
  ports:
    - name: dns-udp
      protocol: UDP
      port: 5353
      targetPort: 53
    - name: dns-tcp
      protocol: TCP
      port: 5353
      targetPort: 53
