adguard-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home-ingress
  namespace: adguard-home
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-production
spec:
  tls:
    - hosts:
        - adguard.tryrocket.cloud
      secretName: tryrocket-cloud-http-tls
  rules:
    - host: adguard.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-home
                port:
                  number: 100
